# presto

./: CODEOWNERS  pom.xml
.github/: dependabot.yml
.github/actions/registry-login/: action.yml
.github/workflows/: arrow-flight-tests.yml  docs.yml  hive-tests.yml  jdbc-connector-tests.yml  kudu.yml  maven-checks.yml  presto-release-publish.yml  prestocpp-linux-adapters-build.yml  prestocpp-linux-build-and-unit-test.yml  prestocpp-linux-build.yml  prestocpp-macos-build.yml  product-tests-basic-environment.yml  product-tests-specific-environment.yml  singlestore-tests.yml  spark-integration.yml  test-other-modules.yml  tests.yml  web-ui-checks.yml
presto-accumulo/: pom.xml
presto-docs/src/main/sphinx/: presto-cpp.rst
presto-docs/src/main/sphinx/admin/: properties-session.rst  properties.rst  resource-groups.rst
presto-docs/src/main/sphinx/cache/: local.rst  service.rst
presto-docs/src/main/sphinx/connector/: iceberg.rst  oracle.rst
presto-docs/src/main/sphinx/develop/: openlineage-event-listener.rst
presto-docs/src/main/sphinx/functions/: geospatial.rst
presto-docs/src/main/sphinx/installation/: deploy-docker.rst  deployment.rst
presto-docs/src/main/sphinx/presto_cpp/: federation.rst  installation.rst  properties-session.rst  properties.rst
presto-docs/src/main/sphinx/release/: release-0.101.rst  release-0.103.rst  release-0.109.rst  release-0.111.rst  release-0.113.rst  release-0.125.rst  release-0.126.rst  release-0.128.rst  release-0.130.rst  release-0.133.rst  release-0.140.rst  release-0.148.rst  release-0.152.rst  release-0.153.rst  release-0.156.rst  release-0.158.rst  release-0.162.rst  release-0.166.rst  release-0.168.rst  release-0.169.rst  release-0.170.rst  release-0.171.rst  release-0.177.rst  release-0.181.rst  release-0.182.rst  release-0.185.rst  release-0.188.rst  release-0.190.rst  release-0.192.rst  release-0.193.rst  release-0.194.rst  release-0.197.rst  release-0.198.rst  release-0.199.rst  release-0.202.rst  release-0.205.rst  release-0.216.rst  release-0.217.rst  release-0.218.rst  release-0.219.rst  (+30 more)
presto-docs/src/main/sphinx/rest/: statement.rst
presto-docs/src/main/sphinx/router/: deployment.rst
presto-druid/: pom.xml
presto-elasticsearch/: pom.xml
presto-flight-shim/: pom.xml
presto-function-server/: pom.xml
presto-iceberg/: pom.xml
presto-kafka/: pom.xml
presto-main-base/: pom.xml
presto-native-execution/: CMakeLists.txt  Makefile  README.md  docker-compose.yml
presto-native-execution/presto_cpp/main/: CMakeLists.txt  PeriodicTaskManager.cpp  PrestoMain.cpp  PrestoServer.cpp  TaskManager.cpp  TaskManager.h  TaskResource.cpp
presto-native-execution/presto_cpp/main/common/: CMakeLists.txt  Configs.cpp  Configs.h
presto-native-execution/presto_cpp/main/common/tests/: CMakeLists.txt  ConfigTest.cpp
presto-native-execution/presto_cpp/main/connectors/: CMakeLists.txt  IcebergPrestoToVeloxConnector.cpp  IcebergPrestoToVeloxConnector.h  PrestoToVeloxConnector.h  PrestoToVeloxConnectorUtils.cpp  PrestoToVeloxConnectorUtils.h  Registration.cpp  Registration.h
presto-native-execution/presto_cpp/main/connectors/arrow_flight/: ArrowFlightConnector.cpp  ArrowFlightConnector.h  CMakeLists.txt
presto-native-execution/presto_cpp/main/connectors/arrow_flight/arrow_federation/: ArrowFederationConnector.cpp  ArrowFederationConnector.h
presto-native-execution/presto_cpp/main/connectors/arrow_flight/auth/: CMakeLists.txt
presto-native-execution/presto_cpp/main/connectors/arrow_flight/tests/utils/: CMakeLists.txt
presto-native-execution/presto_cpp/main/connectors/hive/functions/: CMakeLists.txt
presto-native-execution/presto_cpp/main/functions/: CMakeLists.txt
presto-native-execution/presto_cpp/main/functions/remote/: CMakeLists.txt
presto-native-execution/presto_cpp/main/functions/remote/tests/server/: CMakeLists.txt
presto-native-execution/presto_cpp/main/functions/tests/: CMakeLists.txt
presto-native-execution/presto_cpp/main/functions/theta_sketch/: CMakeLists.txt
presto-native-execution/presto_cpp/main/functions/theta_sketch/tests/: CMakeLists.txt
presto-native-execution/presto_cpp/main/operators/: CMakeLists.txt  IcebergMergeProcessorOperator.cpp  IcebergMergeProcessorOperator.h
presto-native-execution/presto_cpp/main/operators/tests/: CMakeLists.txt  IcebergMergeProcessorOperatorTest.cpp
presto-native-execution/presto_cpp/main/properties/session/: SessionProperties.cpp  SessionProperties.h
presto-native-execution/presto_cpp/main/properties/session/tests/: SessionPropertiesTest.cpp
presto-native-execution/presto_cpp/main/tests/: CMakeLists.txt  TaskManagerTest.cpp
presto-native-execution/presto_cpp/main/tool/trace/: CMakeLists.txt
presto-native-execution/presto_cpp/main/tool/trace/tests/: CMakeLists.txt
presto-native-execution/presto_cpp/main/types/: CMakeLists.txt  PrestoToVeloxExpr.cpp  PrestoToVeloxQueryPlan.cpp  PrestoToVeloxQueryPlan.h  TypeParser.cpp
presto-native-execution/presto_cpp/main/types/tests/: CMakeLists.txt  PrestoToVeloxConnectorTest.cpp  RowExpressionTest.cpp  TypeParserTest.cpp
presto-native-execution/presto_cpp/presto_protocol/: CMakeLists.txt  presto_protocol.yml
presto-native-execution/presto_cpp/presto_protocol/connector/arrow_federation/: presto_protocol-json-hpp.mustache  presto_protocol_arrow_federation.h
presto-native-execution/presto_cpp/presto_protocol/connector/iceberg/: IcebergConnectorProtocol.h  presto_protocol_iceberg.cpp  presto_protocol_iceberg.h  presto_protocol_iceberg.yml
presto-native-execution/presto_cpp/presto_protocol/core/: ConnectorProtocol.h  presto_protocol_core.cpp  presto_protocol_core.h  presto_protocol_core.yml
presto-native-execution/presto_cpp/presto_protocol/tests/: CMakeLists.txt
presto-native-execution/scripts/dockerfiles/: prestissimo-runtime.dockerfile
presto-pinot/: pom.xml
presto-pinot-toolkit/: pom.xml
presto-router/: pom.xml
presto-server/src/main/provisio/: presto.xml
presto-testng-services/: pom.xml
presto-ui/src/: package.json
presto-ui/src/components/: QueryResults.jsx
(+224 files in other folders)
